// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipGroup chip group default 1`] = `
<Fragment>
  <ul
    className="pf-c-chip-group"
  >
    <Chip
      className=""
      closeBtnAriaLabel="close"
      component="li"
      isOverflowChip={false}
      isReadOnly={false}
      key=".0"
      onClick={[Function]}
      tooltipPosition="top"
    >
      1.1
    </Chip>
  </ul>
</Fragment>
`;

exports[`ChipGroup chip group with toolbar 1`] = `
<InnerChipGroup
  className=""
  collapsedText="\${remaining} more"
  expandedText="Show Less"
  isOpen={false}
  onToggleCollapse={[Function]}
  withToolbar={true}
>
  <ChipGroupToolbarItem
    categoryName=""
    className=""
  >
    <Chip
      className=""
      closeBtnAriaLabel="close"
      component="div"
      isOverflowChip={false}
      isReadOnly={false}
      onClick={[Function]}
      tooltipPosition="top"
    >
      1.1
    </Chip>
  </ChipGroupToolbarItem>
</InnerChipGroup>
`;
